--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Daniel Kaziev",
   "license": "ISC",
   "dependencies": {
+    "@grpc/grpc-js": "^1.12.2",
+    "@grpc/proto-loader": "^0.7.13",
     "@types/supertest": "^6.0.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
