docs: update example env

--- a/.env.sample
+++ b/.env.sample
@@ -4,4 +4,6 @@ KANBAN_DB_PASSWORD=password
 KANBAN_DB_HOST=localhost
 KANBAN_DB_NAME=boards_db
 KANBAN_AUTH_PORT=5555
-KANBAN_BASE_API_URL=/api
+KANBAN_BASE_API_URL=/api/boards
+KANBAN_GRPC_HOST=localhost
+KANBAN_GRPC_PORT=5551
